--- a/CallAdmin.csproj
+++ b/CallAdmin.csproj
@@ -4,12 +4,16 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CounterStrikeSharp.API" Version="1.0.90" />
-    <PackageReference Include="Dapper" Version="2.1.24" />
-    <PackageReference Include="MySqlConnector" Version="2.3.1" />
+    <PackageReference Include="CounterStrikeSharp.API" Version="1.0.124" />
+    <PackageReference Include="Dapper" Version="*" />
+    <PackageReference Include="MySqlConnector" Version="*" />
+
+    <None Update="lang\**\*.*" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
